# rust-rest-test

./: Cargo.toml  README.md
migrations/2020-04-20-150435_test/: up.sql
src/: lib.rs  models.rs  schema.rs
