[package]
name = "rust-rest"
version = "0.1.0"
authors = ["avokadoen <akselhallajs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["mysql"] }
serde = { version = "1.0.106", features = ["derive"] }
dotenv = "0.15.0"
rocket = "0.4.4"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]